--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+      <div class="head">
+
+      </div>
       <div class="image-mazda">
             <div class="container ">
                   <div class="card bg-blue bg-black">
