--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                           <input type="text" class="form-control" id="precio"
                                                 placeholder="Ingresa el Precio" required>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                                    <button id="save" type="submit" class="btn btn-primary">Ingresar</button>
                               </form>
                         </div>
                   </div>
